# space-cmd

./: Cargo.toml  README.md  context.md  justfile
.cargo/: config.toml
brr/: README.md
brr/findings/: 001-self-improving-baseline.md  002-autotask-catch22.md  003-autotask-success.md
brr/specs/: space-cmd-v2.md
docs/: architecture.md  ux.md
src/: api.rs  app.rs  db.rs  diff.rs  health.rs  lib.rs  main.rs  parser.rs  schema.rs  session.rs  source.rs  time.rs  watcher.rs
src/app/: autocomplete.rs  input.rs  mod.rs  navigation.rs  scroll.rs  unread.rs
src/ui/: activity.rs  channel.rs  input.rs  ledger.rs  mod.rs  pane.rs  session.rs  sidebar.rs  status.rs  stream.rs
tests/: app_state.rs  autocomplete.rs  input.rs  integration.rs
