[package]
name = "space-cmd"
version = "0.0.1"
edition = "2024"
description = "Command center for space agents"
keywords = ["space", "agents", "cli", "tui"]
license = "Apache-2.0"
repository = "https://github.com/iteebz/space-cmd"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
rusqlite = "0.32"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6.1"
