[package]
name = "space-cmd"
version = "0.0.1"
edition = "2024"
description = "Command center for space agents"
keywords = ["space", "agents", "cli", "tui"]
license = "Apache-2.0"
repository = "https://github.com/iteebz/space-cmd"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
serde_yaml = "0.9.34"
clap = { version = "4.5", features = ["derive"] }
